feat: Complete wiki migration with comprehensive documentation
- Create 16-section wiki structure with LLM-optimized content
- Integrate MCP security insights from Docker's MCP Security Explained blog
- Add comprehensive security documentation (244+ security references)
- Include Mermaid diagrams for architecture and security model
- Set up GitHub Actions workflow for automated wiki synchronization
- Migrate existing docs to docs/legacy/ with deprecation notices
- Shorten SECURITY.md and update README.md to point to wiki
- Add comprehensive troubleshooting, FAQ, and glossary sections
- Implement policy-based access control documentation
- Add deployment, integration, and observability guides

Total: 231 KB of documentation across 16 sections
Security: Policy enforcement, audit logging, compliance reporting
Structure: LLM-friendly format with clear navigation and cross-references

--- a/docs/wiki/06.3-policy.yml.md
+++ b/docs/wiki/06.3-policy.yml.md
@@ -1,24 +1,10 @@
-# Policy Configuration Reference
+# 6.3 policy.yml
 
-This document provides a comprehensive reference for the `policy.yml` configuration file used by mcp-ssh-orchestrator. The policy engine implements a **deny-by-default** security model where commands must explicitly match an "allow" rule to execute.
-
-## Table of Contents
-
-- [Overview](#overview)
-- [Configuration Sections](#configuration-sections)
-- [Root Level Settings](#root-level-settings)
-- [Limits Section](#limits-section)
-- [Network Section](#network-section)
-- [Rules Section](#rules-section)
-- [Overrides Section](#overrides-section)
-- [Glob Pattern Matching](#glob-pattern-matching)
-- [Rule Evaluation Order](#rule-evaluation-order)
-- [Override Hierarchy](#override-hierarchy)
-- [Default Values](#default-values)
+**Purpose:** Define security policies, access controls, and execution limits for mcp-ssh-orchestrator using a deny-by-default model.
 
 ## Overview
 
-The policy engine provides multiple layers of security controls:
+The `policy.yml` file implements a **deny-by-default security model** where commands must explicitly match an "allow" rule to execute. It provides multiple layers of security controls:
 
 1. **Command Substring Blocking** - Hard blocks commands containing dangerous substrings
 2. **Rule-based Allow/Deny** - Pattern-based command matching with glob support
@@ -26,42 +12,50 @@ The policy engine provides multiple layers of security controls:
 4. **Execution Limits** - Timeouts, output size caps, and host key requirements
 5. **Per-host/Tag Overrides** - Granular control for specific hosts or host groups
 
-## YAML Style Guide
+## File Structure
 
-For consistency and readability, we follow these YAML array formatting guidelines:
+```yaml
+# policy.yml
+known_hosts_path: "/app/keys/known_hosts"
 
-### When to Use Inline Arrays `[]`
-- **Empty arrays**: `allow_ips: []`
-- **Single-item lists**: `aliases: ["*"]`, `tags: ["production"]`
-
-### When to Use Multi-line Dash Syntax
-- **Two or more items** (always use multi-line for readability):
-  ```yaml
+limits:
+  max_seconds: 60
+  max_output_bytes: 1048576
+  host_key_auto_add: false
+  require_known_host: true
   deny_substrings:
     - "rm -rf /"
-    - "shutdown -h"
-    - "reboot"
-  ```
-- **Commands in rules** (always multi-line for readability):
-  ```yaml
-  commands:
-    - "systemctl status *"
-    - "docker ps*"
-  ```
-- **Network blocks/lists with comments**:
-  ```yaml
-  block_ips:
-    - "0.0.0.0"           # Block all zeros
-    - "255.255.255.255"   # Block broadcast
-  ```
+    - "shutdown*"
+    - "reboot*"
 
-### General Principles
-- **Empty arrays** → Inline: `tags: []`
-- **Single item** → Inline: `aliases: ["*"]`
-- **Two or more items** → Multi-line for readability
-- **Commands** → Always multi-line
-- **Network blocks/lists** → Multi-line (allows comments)
-- **Consistency** → When in doubt, use multi-line for clarity
+network:
+  allow_cidrs:
+    - "10.0.0.0/8"
+    - "192.168.0.0/16"
+  block_ips:
+    - "0.0.0.0"
+    - "255.255.255.255"
+  require_known_host: true
+
+rules:
+  - action: "allow"
+    aliases: ["prod-*"]
+    tags: ["production"]
+    commands:
+      - "uptime*"
+      - "df -h*"
+      - "systemctl status *"
+
+overrides:
+  aliases:
+    prod-db-1:
+      max_seconds: 20
+      max_output_bytes: 131072
+  tags:
+    production:
+      max_seconds: 30
+      require_known_host: true
+```
 
 ## Configuration Sections
 
@@ -241,10 +235,332 @@ When multiple overrides apply, precedence is (highest to lowest):
 | `block_cidrs` | `[]` | No CIDR blocklist |
 | `known_hosts_path` | None | Use system default |
 
-## Related Documentation
+## Policy Examples
 
-- [Policy Examples](POLICY_EXAMPLES.md) - Practical configuration examples
-- [Policy Security](POLICY_SECURITY.md) - Security best practices and troubleshooting
-- [Main README](../README.md) - General project documentation
-- [Security Guide](SECURITY.md) - General security guidelines
-- [Contributing Guide](CONTRIBUTING.md) - Development and contribution guidelines
+### Basic Read-Only Policy
+
+```yaml
+# Basic read-only policy
+known_hosts_path: "/app/keys/known_hosts"
+
+limits:
+  max_seconds: 30
+  max_output_bytes: 262144
+  host_key_auto_add: false
+  require_known_host: true
+
+network:
+  allow_cidrs:
+    - "10.0.0.0/8"
+    - "192.168.0.0/16"
+  require_known_host: true
+
+rules:
+  # Basic system information
+  - action: "allow"
+    aliases: ["*"]
+    tags: []
+    commands:
+      - "uname*"
+      - "uptime*"
+      - "whoami"
+      - "hostname*"
+      - "date*"
+      - "id*"
+
+  # Disk and memory usage
+  - action: "allow"
+    aliases: ["*"]
+    tags: []
+    commands:
+      - "df -h*"
+      - "free -h*"
+      - "lsblk*"
+
+  # Process information
+  - action: "allow"
+    aliases: ["*"]
+    tags: []
+    commands:
+      - "ps aux*"
+      - "top -n 1*"
+
+  # Service status (read-only)
+  - action: "allow"
+    aliases: ["*"]
+    tags: []
+    commands:
+      - "systemctl status *"
+      - "systemctl is-active *"
+      - "systemctl is-enabled *"
+```
+
+### Production Environment Policy
+
+```yaml
+# Production environment policy
+known_hosts_path: "/app/keys/known_hosts"
+
+limits:
+  max_seconds: 20
+  max_output_bytes: 131072
+  host_key_auto_add: false
+  require_known_host: true
+  deny_substrings:
+    - "rm -rf /"
+    - "shutdown*"
+    - "reboot*"
+    - "systemctl restart*"
+    - "systemctl stop*"
+    - "systemctl start*"
+    - "apt *"
+    - "yum *"
+    - "docker run*"
+    - "kubectl *"
+
+network:
+  allow_cidrs:
+    - "10.0.0.0/8"
+  block_cidrs:
+    - "0.0.0.0/0"  # Block all public internet
+  require_known_host: true
+
+rules:
+  # Minimal read-only commands for production
+  - action: "allow"
+    aliases: ["prod-*"]
+    tags: ["production"]
+    commands:
+      - "uptime*"
+      - "df -h*"
+      - "systemctl status *"
+      - "journalctl --no-pager -n 20 *"
+
+  # Explicit deny for production
+  - action: "deny"
+    aliases: ["prod-*"]
+    tags: ["production"]
+    commands:
+      - "systemctl restart*"
+      - "systemctl stop*"
+      - "systemctl start*"
+      - "apt *"
+      - "yum *"
+      - "docker *"
+      - "kubectl *"
+
+overrides:
+  aliases:
+    prod-db-1:
+      max_seconds: 10
+      max_output_bytes: 65536
+    prod-web-1:
+      max_seconds: 15
+      max_output_bytes: 131072
+```
+
+### Development/Staging Policy
+
+```yaml
+# Development/staging policy
+known_hosts_path: "/app/keys/known_hosts"
+
+limits:
+  max_seconds: 60
+  max_output_bytes: 1048576
+  host_key_auto_add: true
+  require_known_host: false
+
+network:
+  allow_cidrs:
+    - "10.0.0.0/8"
+    - "192.168.0.0/16"
+    - "172.16.0.0/12"
+  require_known_host: false
+
+rules:
+  # Read-only commands
+  - action: "allow"
+    aliases: ["*"]
+    tags: []
+    commands:
+      - "uname*"
+      - "uptime*"
+      - "df -h*"
+      - "ps aux*"
+      - "systemctl status *"
+
+  # Development-specific commands
+  - action: "allow"
+    aliases:
+      - "dev-*"
+      - "stg-*"
+    tags:
+      - "development"
+      - "staging"
+    commands:
+      - "systemctl restart *"
+      - "systemctl stop *"
+      - "systemctl start *"
+      - "docker ps*"
+      - "docker logs *"
+      - "kubectl get *"
+      - "kubectl describe *"
+
+  # Network diagnostics for dev/staging
+  - action: "allow"
+    aliases:
+      - "dev-*"
+      - "stg-*"
+    tags:
+      - "development"
+      - "staging"
+    commands:
+      - "ping*"
+      - "traceroute*"
+      - "ss -tulpn*"
+      - "netstat*"
+
+overrides:
+  tags:
+    development:
+      max_seconds: 120
+      host_key_auto_add: true
+      require_known_host: false
+    staging:
+      max_seconds: 90
+      host_key_auto_add: true
+      require_known_host: false
+```
+
+## YAML Style Guide
+
+For consistency and readability, follow these YAML array formatting guidelines:
+
+### When to Use Inline Arrays `[]`
+- **Empty arrays**: `allow_ips: []`
+- **Single-item lists**: `aliases: ["*"]`, `tags: ["production"]`
+
+### When to Use Multi-line Dash Syntax
+- **Two or more items** (always use multi-line for readability):
+  ```yaml
+  deny_substrings:
+    - "rm -rf /"
+    - "shutdown -h"
+    - "reboot"
+  ```
+- **Commands in rules** (always multi-line for readability):
+  ```yaml
+  commands:
+    - "systemctl status *"
+    - "docker ps*"
+  ```
+- **Network blocks/lists with comments**:
+  ```yaml
+  block_ips:
+    - "0.0.0.0"           # Block all zeros
+    - "255.255.255.255"   # Block broadcast
+  ```
+
+### General Principles
+- **Empty arrays** → Inline: `tags: []`
+- **Single item** → Inline: `aliases: ["*"]`
+- **Two or more items** → Multi-line for readability
+- **Commands** → Always multi-line
+- **Network blocks/lists** → Multi-line (allows comments)
+- **Consistency** → When in doubt, use multi-line for clarity
+
+## Validation and Testing
+
+### Policy Validation
+
+```bash
+# Validate policy.yml syntax
+python -c "import yaml; yaml.safe_load(open('config/policy.yml'))"
+
+# Validate policy rules
+python -c "
+from mcp_ssh.policy import Policy
+policy = Policy('config/policy.yml')
+print('Policy validation:', policy.validate())
+"
+```
+
+### Policy Testing
+
+```bash
+# Test policy rules with dry-run
+ssh_plan --alias "web1" --command "uptime"
+ssh_plan --alias "prod-web-1" --command "systemctl restart nginx"
+
+# Test network policies
+ssh_plan --alias "web1" --command "ping 8.8.8.8"
+```
+
+### Policy Debugging
+
+```bash
+# Enable debug logging
+export MCP_SSH_DEBUG=1
+ssh_plan --alias "web1" --command "uptime"
+
+# Check policy evaluation
+python -c "
+from mcp_ssh.policy import Policy
+policy = Policy('config/policy.yml')
+result = policy.evaluate('web1', 'uptime', ['production'])
+print('Policy result:', result)
+"
+```
+
+## Troubleshooting
+
+### Common Issues
+
+1. **Invalid YAML syntax**
+   ```bash
+   # Check syntax
+   python -c "import yaml; yaml.safe_load(open('config/policy.yml'))"
+   ```
+
+2. **Policy rule conflicts**
+   ```bash
+   # Test specific rules
+   ssh_plan --alias "web1" --command "uptime"
+   ```
+
+3. **Network policy issues**
+   ```bash
+   # Check network configuration
+   python -c "
+   from mcp_ssh.policy import Policy
+   policy = Policy('config/policy.yml')
+   print('Network config:', policy.network_config)
+   "
+   ```
+
+### Policy Debugging
+
+1. **Rule not matching**
+   ```bash
+   # Enable debug mode
+   export MCP_SSH_DEBUG=1
+   ssh_plan --alias "web1" --command "uptime"
+   ```
+
+2. **Override not applying**
+   ```bash
+   # Check override hierarchy
+   python -c "
+   from mcp_ssh.policy import Policy
+   policy = Policy('config/policy.yml')
+   print('Overrides:', policy.overrides)
+   "
+   ```
+
+## Next Steps
+
+- **[Usage Cookbook](08-Usage-Cookbook)** - Practical policy examples
+- **[Security Model](05-Security-Model)** - Security architecture details
+- **[Troubleshooting](12-Troubleshooting)** - Common policy issues
+- **[Deployment](09-Deployment)** - Production policy configuration
