refactor: replace false compliance claims with accurate security framework alignment
- Remove misleading claims about SOC 2, ISO 27001, PCI-DSS, HIPAA compliance
- These are SaaS/hosting certification frameworks, not applicable to open-source tools
- Align security claims with OWASP LLM Top 10 (LLM01, LLM07, LLM08)
- Align security claims with MITRE ATT&CK framework
- Clarify that the tool provides security controls that SUPPORT compliance efforts
- Note that actual compliance is the responsibility of the deploying organization

References:
- OWASP LLM Top 10: https://owasp.org/www-project-top-10-for-large-language-model-applications/
- MITRE ATT&CK: https://attack.mitre.org/

--- a/docs/wiki/06.1-servers.yml.md
+++ b/docs/wiki/06.1-servers.yml.md
@@ -157,10 +157,10 @@ hosts:
 - `kubernetes` - Kubernetes nodes
 
 **Security Tags:**
-- `pci` - PCI-DSS compliant
-- `hipaa` - HIPAA compliant
-- `soc2` - SOC 2 compliant
-- `critical` - Critical infrastructure
+- `pci` - Tags hosts requiring PCI-DSS security controls
+- `hipaa` - Tags hosts requiring HIPAA security controls  
+- `soc2` - Tags hosts requiring SOC 2 security controls
+- `critical` - Critical infrastructure requiring enhanced monitoring
 
 ### Tag Usage Examples
 
