Security: Fix SSH host key validation (CWE-295) (#35)
* Security: Fix SSH host key validation (CWE-295)

Fix CodeQL security alert by removing unsafe Paramiko host key policies.

Changes:
- Remove AcceptPolicy class and AutoAddPolicy() usage
- Always use RejectPolicy() for strict host key verification
- Deprecate host_key_auto_add and require_known_host=False options
- Add deprecation warnings when unsafe configurations are detected
- Update all SSH connections to require known_hosts entry
- Update documentation and examples to reflect security requirements

Fixes CodeQL alert: py/paramiko-missing-host-key-validation
References: CWE-295

Breaking Change: Configurations using host_key_auto_add: true or
require_known_host: false will now fail with clear error messages.
Users must populate known_hosts file before connecting.

* Fix: Apply black formatting and remove unused import

--- a/docs/wiki/06.3-policy.yml.md
+++ b/docs/wiki/06.3-policy.yml.md
@@ -2,6 +2,8 @@
 
 **Purpose:** Define security policies, access controls, and execution limits for mcp-ssh-orchestrator using a deny-by-default model.
 
+**Security Note:** Host key verification is always enforced (CWE-295). Unsafe policies (`host_key_auto_add: true`, `require_known_host: false`) are deprecated and ignored. All SSH connections require a known_hosts entry.
+
 ## Overview
 
 The `policy.yml` file implements a **deny-by-default security model** where commands must explicitly match an "allow" rule to execute. It provides multiple layers of security controls:
@@ -81,8 +83,8 @@ The `limits` section defines global execution limits and security settings that 
 |-------|------|----------|---------|-------------|---------|
 | `max_seconds` | integer | No | 60 | Maximum command execution time in seconds | `30` |
 | `max_output_bytes` | integer | No | 1048576 | Maximum combined stdout/stderr output size in bytes | `524288` |
-| `host_key_auto_add` | boolean | No | false | Automatically add unknown host keys to known_hosts | `true` |
-| `require_known_host` | boolean | No | true | Require host to exist in known_hosts before connection | `false` |
+| `host_key_auto_add` | boolean | No | false | **Deprecated**: Ignored for security (CWE-295). Always use `require_known_host: true` | `true` |
+| `require_known_host` | boolean | No | true | **Security**: Always enforced. Require host to exist in known_hosts before connection. Prevents MITM attacks | `false` |
 | `deny_substrings` | array | No | See below | List of substrings that will block any command containing them | `["rm -rf", "shutdown"]` |
 
 ### Command Denial Bypass Prevention
@@ -239,8 +241,8 @@ When multiple overrides apply, precedence is (highest to lowest):
 |---------|---------------|-------------|
 | `max_seconds` | 60 | Maximum command execution time |
 | `max_output_bytes` | 1048576 | Maximum output size (1 MiB) |
-| `host_key_auto_add` | false | Don't auto-add host keys |
-| `require_known_host` | true | Require known_hosts entry |
+| `host_key_auto_add` | false | **Deprecated**: Ignored for security (CWE-295) |
+| `require_known_host` | true | **Security**: Always enforced. Prevents MITM attacks |
 | `deny_substrings` | 14+ patterns | Dangerous command substrings |
 | `allow_ips` | `[]` | No IP allowlist (allow all) |
 | `allow_cidrs` | `[]` | No CIDR allowlist (allow all) |
@@ -381,15 +383,14 @@ known_hosts_path: "/app/keys/known_hosts"
 limits:
   max_seconds: 60
   max_output_bytes: 1048576
-  host_key_auto_add: true
-  require_known_host: false
+  require_known_host: true  # Always enforced (CWE-295)
 
 network:
   allow_cidrs:
     - "10.0.0.0/8"
     - "192.168.0.0/16"
     - "172.16.0.0/12"
-  require_known_host: false
+  require_known_host: true  # Always enforced (CWE-295)
 
 rules:
   # Read-only commands
@@ -438,12 +439,10 @@ overrides:
   tags:
     development:
       max_seconds: 120
-      host_key_auto_add: true
-      require_known_host: false
+      # Note: host_key_auto_add and require_known_host=false are deprecated (CWE-295)
     staging:
       max_seconds: 90
-      host_key_auto_add: true
-      require_known_host: false
+      # Note: host_key_auto_add and require_known_host=false are deprecated (CWE-295)
 ```
 
 ## YAML Style Guide
