Update CHANGELOG, README, and documentation for release 0.3.3 (#43)
- **CHANGELOG**: Added details for version 0.3.3, including changes to the compose workflow, quick start bootstrap, and documentation cleanup.
- **README**: Revised project description to emphasize zero-trust SSH orchestration and updated quick start instructions to highlight the new setup script.
- **Documentation**: Removed deprecated legacy files, improved security policy reporting, and clarified configuration examples. Enhanced glossary definitions and added new tags for security contexts.
- **Compose**: Updated docker-compose.yml to pin the image version to 0.3.3 and improved setup script to generate a default .env file.
- **Examples**: Updated example configurations to reflect new practices and added descriptions for clarity.

--- a/docs/wiki/06.1-servers.yml.md
+++ b/docs/wiki/06.1-servers.yml.md
@@ -162,10 +162,10 @@ hosts:
 
 **Security Tags:**
 
-- `pci` - Tags hosts requiring PCI-DSS security controls
-- `hipaa` - Tags hosts requiring HIPAA security controls  
-- `soc2` - Tags hosts requiring SOC 2 security controls
 - `critical` - Critical infrastructure requiring enhanced monitoring
+- `restricted` - Hosts that require limited access and additional review
+- `audit` - Systems with elevated logging requirements
+- `sandbox` - Isolated environments for testing untrusted commands
 
 ### Tag Usage Examples
 
