docs: refresh security guidance (#64)

--- a/docs/wiki/06.2-credentials.yml.md
+++ b/docs/wiki/06.2-credentials.yml.md
@@ -117,11 +117,11 @@ All string parameters in credentials configuration have length limits:
 - **Rejected**: Special characters, path separators, traversal patterns
 - **Examples**:
   ```yaml
-  # ✅ Valid
+  #  Valid
   password_secret: "prod_password"
   password_secret: "key-passphrase"
   
-  # ❌ Invalid (rejected)
+  #  Invalid (rejected)
   password_secret: "../etc/passwd"    # Path traversal
   password_secret: "/absolute/path"   # Absolute path
   password_secret: "secret.name"      # Special characters
@@ -136,9 +136,9 @@ All string parameters in credentials configuration have length limits:
 5. **Security logging**: Path traversal and file validation failures are logged as security events
 
 **File Type Requirements:**
-- ✅ Regular files within secrets directory
-- ❌ Directories (must be files, not directories)
-- ❌ Symbolic links (rejected for security)
+-  Regular files within secrets directory
+-  Directories (must be files, not directories)
+-  Symbolic links (rejected for security)
 
 **Effect**: Prevents accessing files outside the secrets directory via path traversal attacks and blocks access to directories or symlinks that could pose security risks.
 
@@ -154,7 +154,7 @@ export MCP_SSH_SECRET_ADMIN_PASSWORD="admin-password"
 docker run -i --rm \
   -e MCP_SSH_SECRET_PROD_KEY_PASSPHRASE="my-passphrase" \
   -e MCP_SSH_SECRET_ADMIN_PASSWORD="admin-password" \
-  ghcr.io/samerfarida/mcp-ssh-orchestrator:0.1.0
+  ghcr.io/samerfarida/mcp-ssh-orchestrator:latest
 ```
 
 **Claude Desktop configuration:**
@@ -168,7 +168,7 @@ docker run -i --rm \
         "-e", "MCP_SSH_SECRET_PROD_PASSWORD=your-password",
         "-v", "/Users/YOUR_USERNAME/mcp-ssh/config:/app/config:ro",
         "-v", "/Users/YOUR_USERNAME/mcp-ssh/keys:/app/keys:ro",
-        "ghcr.io/samerfarida/mcp-ssh-orchestrator:0.1.0"
+        "ghcr.io/samerfarida/mcp-ssh-orchestrator:latest"
       ]
     }
   }
@@ -185,7 +185,7 @@ echo "my-passphrase" | docker secret create ssh_key_passphrase -
 # Use in Docker Compose
 services:
   mcp-ssh:
-    image: ghcr.io/samerfarida/mcp-ssh-orchestrator:0.1.0
+    image: ghcr.io/samerfarida/mcp-ssh-orchestrator:latest
     secrets:
       - ssh_key_passphrase
     volumes:
@@ -406,11 +406,11 @@ entries:
 
 **Examples**:
 ```yaml
-# ✅ Valid key paths
+#  Valid key paths
 key_path: "id_ed25519"                    # Relative, within keys_dir
 key_path: "/app/keys/id_ed25519"         # Absolute, within keys_dir
 
-# ❌ Invalid (rejected)
+#  Invalid (rejected)
 key_path: "../outside_key"                # Path traversal
 key_path: "/etc/passwd"                  # Outside keys_dir
 key_path: "../../root/.ssh/id_rsa"       # Traversal attempt
@@ -419,9 +419,9 @@ key_path: "symlink_key"                  # Points to symlink, not regular file
 ```
 
 **File Type Requirements:**
-- ✅ Regular files within keys_dir (or non-existent files - validated when used)
-- ❌ Directories
-- ❌ Symbolic links (rejected for security)
+-  Regular files within keys_dir (or non-existent files - validated when used)
+-  Directories
+-  Symbolic links (rejected for security)
 
 **Effect**: Prevents accessing SSH keys from unauthorized locations and blocks access to directories or symlinks that could pose security risks.
 
