--- a/docs/wiki/06.3-policy.yml.md
+++ b/docs/wiki/06.3-policy.yml.md
@@ -226,6 +226,26 @@ The policy engine uses Python's `fnmatch` module for pattern matching, supportin
 2. **Rule Matching**: Rules are evaluated in order until a match is found
 3. **Default Deny**: If no rule matches, command is denied
 
+### Rule Resolution Details
+
+- Rules are processed **top-to-bottom** and the **last matching rule wins**. Each match updates the pending decision, so place broad deny rules after their paired allows if you intend them to override.
+- Because matches overwrite previous decisions, keep conflicting rules close together and comment them for future reviewers.
+- `deny_substrings` are evaluated **before** any rule logic. If a command is blocked there (for example, it contains `sudo `), later allow rules will never run. To permit that operation, remove or override the substring entry for the specific hosts.
+- Always test with `ssh_plan` to verify the final decision after ordering changes.
+
+```yaml
+rules:
+  - action: "allow"
+    aliases: ["prod-*"]
+    commands: ["systemctl status *"]
+
+  - action: "deny"
+    aliases: ["prod-*"]
+    commands: ["systemctl *"]  # Overrides the allow above
+```
+
+In the example, `systemctl status nginx` is denied because the later rule matches the same alias and command pattern.
+
 ## Override Hierarchy
 
 When multiple overrides apply, precedence is (highest to lowest):
@@ -234,6 +254,27 @@ When multiple overrides apply, precedence is (highest to lowest):
 2. **Tag Overrides** - Host tag settings (only if not set by alias)
 3. **Global Limits** - Settings in the `limits` section
 4. **Default Values** - Hardcoded defaults in the policy engine
+
+### Deny Substring Overrides in Practice
+
+Alias/tag overrides can redefine `deny_substrings`, which is useful when you want a strict global block list but still need an escape hatch for a small set of hosts:
+
+```yaml
+limits:
+  deny_substrings:
+    - "sudo "
+    - "rm -rf /"
+    - "kubectl "
+
+overrides:
+  aliases:
+    docker-prod-manager1:
+      deny_substrings:  # Clone the list without sudo
+        - "rm -rf /"
+        - "kubectl "
+```
+
+In this pattern, sudo stays blocked for every host **except** `docker-prod-manager1`. Pair the override with explicit allow rules and higher `max_seconds` values so privileged operations are both auditable and predictable.
 
 ## Default Values
 
@@ -444,6 +485,41 @@ overrides:
       max_seconds: 90
       # Note: host_key_auto_add and require_known_host=false are deprecated (CWE-295)
 ```
+
+### Privileged Maintenance (Non-Interactive Upgrades)
+
+Long-running maintenance commands (like apt upgrades) often require sudo, additional flags, and longer timeouts. Combine explicit allow rules with per-alias overrides:
+
+```yaml
+rules:
+  - action: "allow"
+    aliases:
+      - "docker-prod-manager1"
+      - "docker-prod-manager2"
+      - "docker-prod-manager3"
+    commands:
+      - "sudo apt-get update*"
+      - "DEBIAN_FRONTEND=noninteractive sudo apt-get upgrade -y*"
+
+overrides:
+  aliases:
+    docker-prod-manager1:
+      max_seconds: 300
+      task_result_ttl: 1800
+    docker-prod-manager2:
+      max_seconds: 300
+      task_result_ttl: 1800
+    docker-prod-manager3:
+      max_seconds: 300
+      task_result_ttl: 1800
+```
+
+Workflow:
+
+1. Remove `sudo ` from the global `deny_substrings` list or override it for these hosts.
+2. Allow only the exact command patterns required (non-interactive apt commands in this case).
+3. Increase per-host `max_seconds` so `dpkg` has enough time, and extend `task_result_ttl` so you can retrieve async results later.
+4. Test with `ssh_plan`, run via `ssh_run_async`, then monitor with `ssh_get_task_status/result` and revert overrides if they were temporary.
 
 ## YAML Style Guide
 
