feat: Add Docker MCP Gateway secret injection support (#66)
- Support direct environment variable secret resolution (Docker MCP Gateway pattern)
- Maintain backward compatibility with prefixed env vars (MCP_SSH_SECRET_*)
- Update secret resolution priority: direct env > prefixed env > file
- Add comprehensive test coverage (9 unit tests, 4 integration tests)
- Update documentation with Docker MCP Gateway integration details
- Support all 10 secrets (5 passphrase, 5 password) from Docker MCP Registry

Resolves compatibility with Docker MCP Gateway while preserving existing
standalone deployment behavior.

--- a/docs/wiki/06.2-credentials.yml.md
+++ b/docs/wiki/06.2-credentials.yml.md
@@ -90,9 +90,51 @@ entries:
 ### Secret Resolution Order
 
 Secrets are resolved in this order:
-1. **Environment variable**: `MCP_SSH_SECRET_<NAME>` (uppercase)
-2. **Docker secret file**: `/app/secrets/<name>`
-3. **Empty string**: If not found
+1. **Direct environment variable** (Docker MCP Gateway): `<SECRET_NAME>` (uppercase)
+   - Docker MCP Gateway injects secrets as env vars matching the `env:` field in `server.yml`
+   - Example: `server.yml` has `env: SSH_KEY_PASSPHRASE_01` → container gets `SSH_KEY_PASSPHRASE_01`
+   - Secrets are ONLY injected when Docker MCP Gateway runs the container (not when running manually)
+2. **Prefixed environment variable** (standalone/backward compatibility): `MCP_SSH_SECRET_<NAME>` (uppercase)
+   - Supports existing standalone deployments using prefixed env vars
+3. **Docker secret file**: `/app/secrets/<name>`
+4. **Empty string**: If not found
+
+### Docker MCP Gateway Secret Resolution
+
+When using mcp-ssh-orchestrator with Docker MCP Gateway, secrets are injected as environment variables matching the `env:` field in `server.yml`.
+
+**Important Notes:**
+- Secrets are **ONLY** injected when Docker MCP Gateway runs the container (not when running manually)
+- Docker MCP secret name: `mcp-ssh-orchestrator.ssh_password_secret_01` (stored in Docker MCP)
+- Container env var: `SSH_PASSWORD_SECRET_01` (injected by gateway, matches `env:` field, ALL CAPS)
+- The `env:` field in `server.yml` determines the environment variable name in the container
+
+**Example:**
+```yaml
+# server.yml (Docker MCP Registry)
+secrets:
+  - name: mcp-ssh-orchestrator.ssh_password_secret_01
+    env: SSH_PASSWORD_SECRET_01
+    example: <SSH_PASSWORD_SECRET_01>
+
+# credentials.yml
+entries:
+  - name: "prod_admin"
+    username: "ubuntu"
+    key_path: "id_ed25519"
+    key_passphrase_secret: "SSH_KEY_PASSPHRASE_01"  # Matches env: in server.yml
+    password_secret: "SSH_PASSWORD_SECRET_01"        # Matches env: in server.yml
+```
+
+**Verification:**
+```bash
+# Set secret in Docker MCP
+docker mcp secret set mcp-ssh-orchestrator.ssh_password_secret_01="my-password"
+
+# When gateway runs the container, verify env var exists:
+docker exec <gateway-container> env | grep SSH_PASSWORD_SECRET_01
+# Should output: SSH_PASSWORD_SECRET_01=my-password
+```
 
 ### Path Traversal Protection
 
