Security/fix command chaining bypass (#68)
* fix: Remove unused variable in fix-markdownlint.py

* fix: Remove unused code_block_lang variable

* chore: Update documentation, workflows, and examples

- Updated all wiki documentation files (markdownlint fixes)
- Updated GitHub workflows and issue templates
- Updated example configuration files
- Updated metadata.json and pyproject.toml
- Updated Dockerfile and compose files
- Updated validation scripts

Note: yamllint warnings are style-only (missing ---, line length) and don't affect functionality

--- a/docs/wiki/06.3-policy.yml.md
+++ b/docs/wiki/06.3-policy.yml.md
@@ -100,6 +100,64 @@ Commands are normalized before checking against `deny_substrings` to prevent byp
 
 **Note**: Complex obfuscation (encoding, variable substitution) may still bypass. Focus is on common techniques.
 
+### Command Chaining Behavior
+
+The policy engine validates command chains to prevent policy bypass via chaining operators.
+
+**How It Works:**
+
+- Commands containing chaining operators (`&&`, `||`, `;`, `|`) are parsed into individual commands
+- Each command in the chain is validated separately against policy rules
+- **All commands in the chain must be allowed** for the entire chain to execute
+- If **any command is denied**, the entire chain is blocked
+
+**Supported Operators:**
+
+- `&&` - Logical AND (run next command only if previous succeeds)
+- `||` - Logical OR (run next command only if previous fails)
+- `;` - Sequential execution (run commands in order)
+- `|` - Pipe (pass output of first command to second)
+
+**Command Substitution:**
+
+- Backtick substitution: `` `command` ``
+- Dollar-paren substitution: `$(command)`
+- Substitutions are preserved within commands and validated as part of the command
+
+**Examples:**
+
+```yaml
+# Policy allows: uptime*, whoami
+# Policy denies: apt list --upgradable*
+
+# ✅ ALLOWED: Both commands are allowed
+uptime && whoami
+
+# ❌ DENIED: Second command is denied
+uptime && apt list --upgradable
+
+# ❌ DENIED: First command is denied
+apt list --upgradable && uptime
+
+# ✅ ALLOWED: All three commands are allowed
+uptime && whoami && hostname
+
+# ❌ DENIED: Middle command is denied
+uptime && apt list --upgradable && whoami
+```
+
+**Security Guarantees:**
+
+- Command chaining cannot bypass policy restrictions
+- Each command in a chain is validated individually
+- Order-independent: `cmd1 && cmd2` and `cmd2 && cmd1` are both validated the same way
+- Operators inside quotes are ignored (e.g., `echo "hello && world"` is treated as a single command)
+
+**Error Messages:**
+When a chained command is denied, the error message identifies which specific command in the chain caused the denial:
+
+- `Policy blocked command in chain: 'apt list --upgradable'`
+
 ### Default deny_substrings
 
 The following dangerous command substrings are blocked by default:
@@ -164,7 +222,7 @@ The `rules` section defines command allow/deny rules using glob pattern matching
 A rule matches when **ALL** specified conditions are met:
 
 - **aliases**: If specified, host alias must match at least one pattern
-- **tags**: If specified, at least one host tag must match at least one pattern  
+- **tags**: If specified, at least one host tag must match at least one pattern
 - **commands**: If specified, command must match at least one pattern
 
 If any condition is empty (`[]`), it matches all values.
@@ -230,7 +288,7 @@ The policy engine uses Python's `fnmatch` module for pattern matching, supportin
 
 - Rules are processed **top-to-bottom** and the **last matching rule wins**. Each match updates the pending decision, so place broad deny rules after their paired allows if you intend them to override.
 - Because matches overwrite previous decisions, keep conflicting rules close together and comment them for future reviewers.
-- `deny_substrings` are evaluated **before** any rule logic. If a command is blocked there (for example, it contains `sudo `), later allow rules will never run. To permit that operation, remove or override the substring entry for the specific hosts.
+- `deny_substrings` are evaluated **before** any rule logic. If a command is blocked there (for example, it contains `sudo`), later allow rules will never run. To permit that operation, remove or override the substring entry for the specific hosts.
 - Always test with `ssh_plan` to verify the final decision after ordering changes.
 
 ```yaml
@@ -516,7 +574,7 @@ overrides:
 
 Workflow:
 
-1. Remove `sudo ` from the global `deny_substrings` list or override it for these hosts.
+1. Remove `sudo` from the global `deny_substrings` list or override it for these hosts.
 2. Allow only the exact command patterns required (non-interactive apt commands in this case).
 3. Increase per-host `max_seconds` so `dpkg` has enough time, and extend `task_result_ttl` so you can retrieve async results later.
 4. Test with `ssh_plan`, run via `ssh_run_async`, then monitor with `ssh_get_task_status/result` and revert overrides if they were temporary.
@@ -526,24 +584,31 @@ Workflow:
 For consistency and readability, follow these YAML array formatting guidelines:
 
 ### When to Use Inline Arrays `[]`
+
 - **Empty arrays**: `allow_ips: []`
 - **Single-item lists**: `aliases: ["*"]`, `tags: ["production"]`
 
 ### When to Use Multi-line Dash Syntax
+
 - **Two or more items** (always use multi-line for readability):
+
   ```yaml
   deny_substrings:
     - "rm -rf /"
     - "shutdown -h"
     - "reboot"
   ```
+
 - **Commands in rules** (always multi-line for readability):
+
   ```yaml
   commands:
     - "systemctl status *"
     - "docker ps*"
   ```
+
 - **Network blocks/lists with comments**:
+
   ```yaml
   block_ips:
     - "0.0.0.0"           # Block all zeros
@@ -551,6 +616,7 @@ For consistency and readability, follow these YAML array formatting guidelines:
   ```
 
 ### General Principles
+
 - **Empty arrays** → Inline: `tags: []`
 - **Single item** → Inline: `aliases: ["*"]`
 - **Two or more items** → Multi-line for readability
@@ -606,18 +672,21 @@ print('Policy result:', result)
 ### Common Issues
 
 1. **Invalid YAML syntax**
+
    ```bash
    # Check syntax
    python -c "import yaml; yaml.safe_load(open('config/policy.yml'))"
    ```
 
 2. **Policy rule conflicts**
+
    ```bash
    # Test specific rules
    ssh_plan --alias "web1" --command "uptime"
    ```
 
 3. **Network policy issues**
+
    ```bash
    # Check network configuration
    python -c "
@@ -630,6 +699,7 @@ print('Policy result:', result)
 ### Policy Debugging
 
 1. **Rule not matching**
+
    ```bash
    # Enable debug mode
    export MCP_SSH_DEBUG=1
@@ -637,6 +707,7 @@ print('Policy result:', result)
    ```
 
 2. **Override not applying**
+
    ```bash
    # Check override hierarchy
    python -c "
